More validation samples added. Changes in error handlers